fix items apis
